--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
         </div>
-        <div class="sidebar-brand-text mx-3"> Mahabhujal Dashboard </sup></div>
+        <div class="sidebar-brand-text mx-3"> Mahabhujal Dashboard - Beta </sup></div>
       </a>
 
       <!-- Divider -->
