--- a/tables.html
+++ b/tables.html
@@ -348,32 +348,31 @@
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead>
                     <tr>
-                      <th>owner name</th>
-                      <th>location</th>
-                      <th>depth</th>
-                      <th>level of water</th>
-                      <th>usage</th>
-                      <th>categeory</th>
-                      <th>status</th>
-                      <th>water quality</th>
-                      <th>duration of pumping </th>
-                      <th>no of people</th>
-
+                      <th>Owner</th>
+                      <th>Location</th>
+                      <th>Depth</th>
+                      <th>Level of water</th>
+                      <th>Usage</th>
+                      <th>Categeory</th>
+                      <th>Status</th>
+                      <th>Water quality</th>
+                      <th>Duration of pumping </th>
+                      <th>No of Dependant</th>
 
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
-                      <th>owner name</th>
-                      <th>location</th>
-                      <th>depth</th>
-                      <th>level of water</th>
-                      <th>usage</th>
-                      <th>categeory</th>
-                      <th>status</th>
-                      <th>water quality</th>
-                      <th>duration of pumping </th>
-                      <th>no of people</th>
+                      <th>Owner</th>
+                      <th>Location</th>
+                      <th>Depth</th>
+                      <th>Level of water</th>
+                      <th>Usage</th>
+                      <th>Categeory</th>
+                      <th>Status</th>
+                      <th>Water quality</th>
+                      <th>Duration of pumping </th>
+                      <th>No of Dependant</th>
 
                     </tr>
                   </tfoot>
