--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
-          <span>Components</span>
+          <span>Settings</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="buttons.html">Buttons</a>
-            <a class="collapse-item" href="cards.html">Cards</a>
+            <h6 class="collapse-header">Admin:</h6>
+            <a class="collapse-item" href="#">Mail Server Settings</a>
+            <a class="collapse-item" href="#">Records</a>
+            <a class="collapse-item" href="#">Approval</a>
           </div>
         </div>
       </li>
@@ -167,7 +168,7 @@
       <!-- Nav Item - Maps -->
       <li class="nav-item">
         <a class="nav-link" href="maps.html">
-          <i class="fas fa-fw fa-table"></i>
+          <i class="fas fa-map"></i>
           <span>Maps</span></a>
       </li>
 
