--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <li class="nav-item"><a href="#" class="nav-link">Demand Analysis</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Register</a></li>
+        <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
+
 
       </ul>
     </div>
