--- a/tables.html
+++ b/tables.html
@@ -32,9 +32,9 @@
         <!-- Logo Text -->
         <span class="text-uppercase font-weight-bold">Company</span>
       </a>
-  
+
       <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
-  
+
       <div id="navbarSupportedContent" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
@@ -65,42 +65,42 @@
       </div>
     </li>-->
   </nav>
-  
+
   <body id="page-top">
-  
+
     <!-- Page Wrapper -->
     <div id="wrapper">
-  
+
       <!-- Sidebar -->
       <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-  
+
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
           <div class="sidebar-brand-icon rotate-n-15">
           </div>
           <div class="sidebar-brand-text mx-3"> Mahabhujal </sup></div>
-        
-  
+
+
         </a>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
-  
+
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
           <a class="nav-link" href="index.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a>
         </li>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider">
-  
+
         <!-- Heading -->
         <div class="sidebar-heading">
           Interface
         </div>
-  
+
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
           <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
@@ -116,7 +116,7 @@
             </div>
           </div>
         </li>
-  
+
         <!-- Nav Item - Utilities Collapse Menu -->
         <li class="nav-item">
           <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
@@ -135,53 +135,53 @@
             </div>
           </div>
         </li>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider">
-  
+
         <!-- Heading -->
         <div class="sidebar-heading">
           Analysis
         </div>
-  
-  
+
+
         <!-- Nav Item - Alerts -->
         <li class="nav-item">
             <a class="nav-link" href="#">
               <i class="fas fa-bell"></i>
               <span>Alerts</span></a>
           </li>
-  
+
         <!-- Nav Item - Charts -->
         <li class="nav-item">
           <a class="nav-link" href="charts.html">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Charts</span></a>
         </li>
-  
+
         <!-- Nav Item - Tables -->
         <li class="nav-item">
           <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
+            <i class="fas fa-bell"></i>
             <span>Tables</span></a>
         </li>
-  
-  
+
+
         <!-- Nav Item - Maps -->
         <li class="nav-item">
           <a class="nav-link" href="maps.html">
             <i class="fas fa-map"></i>
             <span>Maps</span></a>
         </li>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
-  
+
         <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
           <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
-  
+
       </ul>
       <!-- End of Sidebar -->
     <!-- End of Sidebar -->
@@ -377,6 +377,7 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
+
 
           <!-- Page Heading -->
           <h1 class="h3 mb-2 text-gray-800">Tables</h1>
