--- a/charts.html
+++ b/charts.html
@@ -114,7 +114,7 @@
           </div>
         </li>
   
-        <!-- Nav Item - Utilities Collapse Menu -->
+        <!-- Nav Item - Utilities Collapse Menu 
         <li class="nav-item">
           <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-wrench"></i>
@@ -125,14 +125,37 @@
               <h6 class="collapse-header">Surveys:</h6>
               <a class="collapse-item" href="#">Borewells</a>
               <a class="collapse-item" href="#">Rainfall</a>
-             <!--<a class="collapse-item" href="utilities-color.html">Colors</a>
+             <a class="collapse-item" href="utilities-color.html">Colors</a>
               <a class="collapse-item" href="utilities-border.html">Borders</a>
               <a class="collapse-item" href="utilities-animation.html">Animations</a>
-              <a class="collapse-item" href="utilities-other.html">Other</a>-->
+              <a class="collapse-item" href="utilities-other.html">Other</a>
             </div>
           </div>
-        </li>
+        </li>-->
   
+
+ <!-- Nav Item - BoreWell -->
+ <li class="nav-item">
+    <a class="nav-link" href="#">
+      <i class="fas fa-upload"></i>
+      <span>Borewell</span></a>
+  </li>
+
+   <!-- Nav Item - Rainfall -->
+ <li class="nav-item">
+    <a class="nav-link" href="#">
+      <i class="fas fa-spinner"></i>
+      <span>Rainfall</span></a>
+  </li>
+
+   <!-- Nav Item - Water Level -->
+ <li class="nav-item">
+    <a class="nav-link" href="#">
+      <i class="fa fa-plus-square"></i>
+      <span>Water Level</span></a>
+  </li>
+
+
         <!-- Divider -->
         <hr class="sidebar-divider">
   
@@ -411,7 +434,7 @@
 
               <!-- Bar Chart -->
               <div class="card shadow mb-5">
-                <div class="card-header py-6">
+                <div class="card-header py-4">
                   <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
                 </div>
                 <div class="card-body">
