--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
       </li>
 
       <!-- Nav Item - Utilities Collapse Menu -->
-      <li class="nav-item">
+      <!-- 
+        <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
           <span>Support Us</span>
@@ -125,13 +126,41 @@
             <h6 class="collapse-header">Surveys:</h6>
             <a class="collapse-item" href="#">Borewells</a>
             <a class="collapse-item" href="#">Rainfall</a>
-           <!--<a class="collapse-item" href="utilities-color.html">Colors</a>
+            <a class="collapse-item" href="utilities-color.html">Colors</a>
             <a class="collapse-item" href="utilities-border.html">Borders</a>
             <a class="collapse-item" href="utilities-animation.html">Animations</a>
-            <a class="collapse-item" href="utilities-other.html">Other</a>-->
+            <a class="collapse-item" href="utilities-other.html">Other</a>
           </div>
         </div>
-      </li>
+      </li> -->
+
+       <!-- Nav Item - BoreWell -->
+       <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-upload"></i>
+            <span>Borewell</span></a>
+        </li>
+
+         <!-- Nav Item - Rainfall -->
+       <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-spinner"></i>
+            <span>Rainfall</span></a>
+        </li>
+
+         <!-- Nav Item - Water Level -->
+       <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fa fa-plus-square"></i>
+            <span>Water Level</span></a>
+        </li>
+
+
+
+
+
+
+
 
       <!-- Divider -->
       <hr class="sidebar-divider">
