--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 </head>
 <!-- NAVBAR-->
-<nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+<nav class="navbar navbar-expand-lg py-3 navbar-light bg-gradient-primary shadow-sm">
   <div class="container">
     <a href="#" class="navbar-brand">
       <!-- Logo Image -->
       <img src="https://res.cloudinary.com/mhmd/image/upload/v1557368579/logo_iqjuay.png" width="45" alt="" class="d-inline-block align-middle mr-2">
       <!-- Logo Text -->
-      <span class="text-uppercase font-weight-bold">Company</span>
+      <span class="text-uppercase font-weight-bold">Mahabhujal</span>
     </a>
 
     <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
