--- a/maps.html
+++ b/maps.html
@@ -18,22 +18,16 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
-  <!-- For Open Layer Maps -->
+  <!-- For Leaflet Maps -->
+  <link href="vendor/leaflet/leaflet.css" rel="stylesheet">
+  <script src="vendor/leaflet/leaflet.js"></script>
+
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="vendor/leaflet/L.TileLayer.BetterWMS.js"></script>
+
   <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css">
-    <style>
-      .map {
-        height: 600px;
-        width: 100%;
-      }
-    </style>
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
-    <title>OpenLayers example</title>
+    <title> Maps </title>
   </head>
-
-
-
-</head>
 
 <!-- NAVBAR-->
 <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
@@ -44,9 +38,9 @@
         <!-- Logo Text -->
         <span class="text-uppercase font-weight-bold">Company</span>
       </a>
-  
+
       <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
-  
+
       <div id="navbarSupportedContent" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
@@ -77,42 +71,42 @@
       </div>
     </li>-->
   </nav>
-  
+
   <body id="page-top">
-  
+
     <!-- Page Wrapper -->
     <div id="wrapper">
-  
+
       <!-- Sidebar -->
       <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-  
+
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
           <div class="sidebar-brand-icon rotate-n-15">
           </div>
           <div class="sidebar-brand-text mx-3"> Mahabhujal </sup></div>
-        
-  
+
+
         </a>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
-  
+
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
           <a class="nav-link" href="index.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a>
         </li>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider">
-  
+
         <!-- Heading -->
         <div class="sidebar-heading">
           Interface
         </div>
-  
+
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
           <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
@@ -128,7 +122,7 @@
             </div>
           </div>
         </li>
-  
+
         <!-- Nav Item - Utilities Collapse Menu -->
         <li class="nav-item">
           <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
@@ -147,60 +141,59 @@
             </div>
           </div>
         </li>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider">
-  
+
         <!-- Heading -->
         <div class="sidebar-heading">
           Analysis
         </div>
-  
-  
+
+
         <!-- Nav Item - Alerts -->
         <li class="nav-item">
             <a class="nav-link" href="#">
               <i class="fas fa-bell"></i>
               <span>Alerts</span></a>
           </li>
-  
+
         <!-- Nav Item - Charts -->
         <li class="nav-item">
           <a class="nav-link" href="charts.html">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Charts</span></a>
         </li>
-  
+
         <!-- Nav Item - Tables -->
         <li class="nav-item">
           <a class="nav-link" href="tables.html">
             <i class="fas fa-fw fa-table"></i>
             <span>Tables</span></a>
         </li>
-  
-  
+
+
         <!-- Nav Item - Maps -->
         <li class="nav-item">
           <a class="nav-link" href="maps.html">
             <i class="fas fa-map"></i>
             <span>Maps</span></a>
         </li>
-  
+
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
-  
+
         <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
           <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
-  
+
       </ul>
       <!-- End of Sidebar -->
     <!-- End of Sidebar -->
 
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
-Earnings Overview
 
       <!-- Main Content -->
       <div id="content">
@@ -395,24 +388,46 @@ Earnings Overview
           <h1 class="h3 mb-4 text-gray-800">Maps </h1>
 
           <!-- Map Code-->
-          <div id="map" class="map"></div>
+          <div id="mapid" class="parent" style="width: 1600px; height: 700px;"></div>
+
             <script type="text/javascript">
-              var map = new ol.Map({
-                target: 'map',
-                layers: [
-                  new ol.layer.Tile({
-                    source: new ol.source.OSM()
-                  })
-                ],
-                view: new ol.View({
-                  center: ol.proj.fromLonLat([75.968447,18.319692]),
-                  zoom: 14
+
+              var mymap = L.map('mapid').setView([18.319406, 75.968962], 14);
+              L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+                maxZoom: 18,
+                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+                  '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+                  'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                id: 'mapbox/streets-v11'
+              }).addTo(mymap);
+
+              var basemaps = {
+            		Borewells: L.tileLayer.betterWms('http://54.236.116.149:8080/geoserver/ows?', {
+            			layers: 'groundwater:borewell_borewell',
+                  opacity: 0.5,
+                  center: [18.319406, 75.968962],
+		              zoom: 14
+            		}),
+
+            	Schools : L.tileLayer.betterWms('http://54.236.116.149:8080/geoserver/ows?', {
+            			layers: 'groundwater:onlyOsmanabad_schools',
+                    opacity: 0.5,
+                    center: [18.319406, 75.968962],
+  		              zoom: 14
+            		}),
+
+            	Census: L.tileLayer.betterWms('http://54.236.116.149:8080/geoserver/ows?', {
+            			layers: 'groundwater:osmanabad',
+                  opacity: 0.5,
+                  center: [18.319406, 75.968962],
+		              zoom: 14
                 })
-              });
+            	};
+
+              L.control.layers(basemaps, {}, {collapsed: false}).addTo(mymap);
+	            basemaps.Census.addTo(mymap);
+
             </script>
-
-
-
 
         </div>
         <!-- /.container-fluid -->
