--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </li>
 
       <!-- Nav Item - Utilities Collapse Menu -->
-      <!-- 
+      <!--
         <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
@@ -266,6 +266,45 @@
 
 
           </form>
+
+            <!-- Example single danger button -->
+  <div class="btn-group">
+    <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      District
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Osmanabad</a>
+      <a class="dropdown-item" href="#">Pune</a>
+      <a class="dropdown-item" href="#">Satara</a>
+
+</div>
+
+<!-- Example single danger button -->
+<form>
+<div class="btn-group">
+<button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Taluka
+</button>
+<div class="dropdown-menu">
+<a class="dropdown-item" href="#">Latur</a>
+<a class="dropdown-item" href="#">Nagpur</a>
+<a class="dropdown-item" href="#">Marathavada</a>
+
+</div>
+</form>
+<!-- ample single danger button -->
+ <form>
+<div class="btn-group">
+<button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Village
+</button>
+<div class="dropdown-menu">
+<a class="dropdown-item" href="#">Yedshi</a>
+<a class="dropdown-item" href="#">Narayangao</a>
+<a class="dropdown-item" href="#">Ambegao</a>
+
+</div>
+</form>
 
 
 
