--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active"><a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Aqufier Mapping</a></li>
+        <li class="nav-item"><a href="aquifer.html" class="nav-link">Aqufier Mapping</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Demand Analysis</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Register</a></li>
