--- a/maps.html
+++ b/maps.html
@@ -27,6 +27,7 @@
 
   <head>
     <title> Maps </title>
+    <><>
   </head>
 
 <!-- NAVBAR-->
@@ -47,6 +48,8 @@
           <li class="nav-item"><a href="#" class="nav-link">About</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Aqufier Mapping</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Demand Analysis</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Runoff</a></li>
+
           <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         </ul>
       </div>
@@ -425,6 +428,21 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">Maps </h1>
+          <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+
+          <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active"><a href="#" class="nav-link">Watershed <span class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Soil</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Rain</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Tree</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Runoff</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Sensex</a></li>
+
+
+              <li class="nav-item"><a href="#" class="nav-link">Land use</a></li>
+            </ul>
+          </div>
 
           <!-- Map Code-->
           <div id="mapid" class="parent" style="width: 1600px; height: 700px;"></div>
