--- a/rain.html
+++ b/rain.html
@@ -23,6 +23,34 @@
 
 </head>
 
+<nav class="navbar navbar-expand-lg py-3 navbar-light bg-gradient-primary shadow-sm">
+  <div class="container">
+    <a href="#" class="navbar-brand">
+      <!-- Logo Image -->
+      <img src="https://res.cloudinary.com/mhmd/image/upload/v1557368579/logo_iqjuay.png" width="45" alt="" class="d-inline-block align-middle mr-2">
+      <!-- Logo Text -->
+      <span class="text-uppercase font-weight-bold">Mahabhujal</span>
+    </a>
+
+    <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+
+    <div id="navbarSupportedContent" class="collapse navbar-collapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active"><a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="aquifer.html" class="nav-link">Aqufier Mapping</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Demand Analysis</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Runoff</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Register</a></li>
+        <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
+
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <body id="page-top">
 
   <!-- Page Wrapper -->
@@ -31,19 +59,17 @@
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-      <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3"> Mahabhujal </sup></div>
       </a>
 
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
@@ -61,45 +87,77 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
-          <span>Components</span>
+          <span>Settings</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="buttons.html">Buttons</a>
-            <a class="collapse-item" href="cards.html">Cards</a>
+            <h6 class="collapse-header">Admin:</h6>
+            <a class="collapse-item" href="#">Mail Server Settings</a>
+            <a class="collapse-item" href="#">Records</a>
+            <a class="collapse-item" href="#">Approval</a>
           </div>
         </div>
       </li>
 
       <!-- Nav Item - Utilities Collapse Menu -->
-      <li class="nav-item">
+      <!--
+        <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
-          <span>Utilities</span>
+          <span>Support Us</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Utilities:</h6>
+            <h6 class="collapse-header">Surveys:</h6>
+            <a class="collapse-item" href="#">Borewells</a>
+            <a class="collapse-item" href="#">Rainfall</a>
             <a class="collapse-item" href="utilities-color.html">Colors</a>
             <a class="collapse-item" href="utilities-border.html">Borders</a>
             <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a>
           </div>
         </div>
-      </li>
+      </li> -->
+
+       <!-- Nav Item - BoreWell -->
+       <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-upload"></i>
+            <span>Borewell</span></a>
+        </li>
+
+         <!-- Nav Item - Rainfall -->
+       <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-spinner"></i>
+            <span>Rainfall</span></a>
+        </li>
+
+         <!-- Nav Item - Water Level -->
+       <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fa fa-plus-square"></i>
+            <span>Water Level</span></a>
+        </li>
+
+
+
+
+
+
+
 
       <!-- Divider -->
       <hr class="sidebar-divider">
 
       <!-- Heading -->
       <div class="sidebar-heading">
-        Addons
+        Analysis
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+      <!--<li class="nav-item">
+       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
           <span>Pages</span>
         </a>
@@ -115,7 +173,14 @@
             <a class="collapse-item" href="blank.html">Blank Page</a>
           </div>
         </div>
-      </li>
+      </li>-->
+
+      <!-- Nav Item - Alerts -->
+      <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-bell"></i>
+            <span>Alerts</span></a>
+        </li>
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
@@ -138,6 +203,15 @@
           </div>
         </div>
       </li>
+
+
+      <!-- Nav Item - Maps -->
+      <li class="nav-item">
+        <a class="nav-link" href="maps.html">
+          <i class="fas fa-map"></i>
+          <span>Maps</span></a>
+      </li>
+
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
 
@@ -174,6 +248,45 @@
               </div>
             </div>
           </form>
+
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              District
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Osmanabad</a>
+              <a class="dropdown-item" href="#">Pune</a>
+              <a class="dropdown-item" href="#">Satara</a>
+
+        </div>
+
+        <!-- Example single danger button -->
+        <form>
+        <div class="btn-group">
+        <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Taluka
+        </button>
+        <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Latur</a>
+        <a class="dropdown-item" href="#">Nagpur</a>
+        <a class="dropdown-item" href="#">Marathavada</a>
+
+        </div>
+        </form>
+        <!-- ample single danger button -->
+         <form>
+        <div class="btn-group">
+        <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Village
+        </button>
+        <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Yedshi</a>
+        <a class="dropdown-item" href="#">Narayangao</a>
+        <a class="dropdown-item" href="#">Ambegao</a>
+
+        </div>
+        </form>
+
 
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
