--- a/index.html
+++ b/index.html
@@ -269,43 +269,197 @@
           </form>
 
             <!-- Example single danger button -->
-  <div class="btn-group">
-    <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      District
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Osmanabad</a>
-      <a class="dropdown-item" href="#">Pune</a>
-      <a class="dropdown-item" href="#">Satara</a>
 
-</div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Region
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Aurangabad</a>
+                <a class="dropdown-item" href="#">Amravati</a>
+                <a class="dropdown-item" href="#">Kokan</a>
+                <a class="dropdown-item" href="#">Nashik</a>
+                <a class="dropdown-item" href="#">Pune</a>
+                <a class="dropdown-item" href="#">Nagpur</a>
 
-<!-- Example single danger button -->
-<form>
-<div class="btn-group">
-<button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-Taluka
-</button>
-<div class="dropdown-menu">
-<a class="dropdown-item" href="#">Latur</a>
-<a class="dropdown-item" href="#">Nagpur</a>
-<a class="dropdown-item" href="#">Marathavada</a>
+            </div>
+            <form>
+            <div class="btn-group">
+            <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            District
+            </button>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Osmanabad</a>
+            <a class="dropdown-item" href="#">Beed</a>
+            <a class="dropdown-item" href="#">Latur</a>
+            <a class="dropdown-item" href="#">Hingoli</a>
+            <a class="dropdown-item" href="#">Jalna</a>
+            <a class="dropdown-item" href="#">Nanded</a>
+            <a class="dropdown-item" href="#">Parabhani</a>
 
-</div>
-</form>
-<!-- ample single danger button -->
- <form>
-<div class="btn-group">
-<button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-Village
-</button>
-<div class="dropdown-menu">
-<a class="dropdown-item" href="#">Yedshi</a>
-<a class="dropdown-item" href="#">Narayangao</a>
-<a class="dropdown-item" href="#">Ambegao</a>
 
-</div>
-</form>
+            </div>
+            </form>
+
+          <!-- Example single danger button -->
+          <form>
+          <div class="btn-group">
+          <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Taluka
+          </button>
+          <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Bhoom</a>
+          <a class="dropdown-item" href="#">Kalamb</a>
+          <a class="dropdown-item" href="#">Loghana</a>
+          <a class="dropdown-item" href="#">Osmanabad</a>
+
+          <a class="dropdown-item" href="#">Paranda</a>
+          <a class="dropdown-item" href="#">Tuljapur</a>
+          <a class="dropdown-item" href="#">Umerga</a>
+          <a class="dropdown-item" href="#">Washi</a>
+
+
+
+
+          </div>
+          </form>
+          <!-- ample single danger button -->
+           <form>
+          <div class="btn-group">
+          <button type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Village
+          </button>
+          <div class="dropdown-menu">
+<a class="dropdown-item" href ="#">Ambehol</a>
+<a class="dropdown-item" href ="#">Ambejawalga</a>
+<a class="dropdown-item" href ="#">Ambewadi</a>
+<a class="dropdown-item" href ="#">Ansurda</a>
+<a class="dropdown-item" href ="#">Arni</a>
+<a class="dropdown-item" href ="#">Bamani</a>
+<a class="dropdown-item" href ="#">Baramgaon Bk.</a>
+<a class="dropdown-item" href ="#">Baramgaon Kh.</a>
+<a class="dropdown-item" href ="#">Bavi</a>
+<a class="dropdown-item" href ="#">Bavi Dhoki</a>
+<a class="dropdown-item" href ="#">Begada</a>
+<a class="dropdown-item" href ="#">Bembli</a>
+<a class="dropdown-item" href ="#">Bhadachiwadi</a>
+<a class="dropdown-item" href ="#">Bhanasgaon</a>
+<a class="dropdown-item" href ="#">Bhandari</a>
+<a class="dropdown-item" href ="#">Bhandarwadi</a>
+<a class="dropdown-item" href ="#">Bhikar Sarola</a>
+<a class="dropdown-item" href ="#">Borgaon raje</a>
+<a class="dropdown-item" href ="#">Borkheda</a>
+<a class="dropdown-item" href ="#">Bukanwadi</a>
+<a class="dropdown-item" href ="#">Chikhali</a>
+<a class="dropdown-item" href ="#">Chilvadi</a>
+<a class="dropdown-item" href ="#">Dakwadi</a>
+<a class="dropdown-item" href ="#">Darphal</a>
+<a class="dropdown-item" href ="#">Dautpur</a>
+<a class="dropdown-item" href ="#">Deolali</a>
+<a class="dropdown-item" href ="#">Dharur</a>
+<a class="dropdown-item" href ="#">Dhoki</a>
+<a class="dropdown-item" href ="#">Dhutta</a>
+<a class="dropdown-item" href ="#">Dudhagaon</a>
+
+<a class="dropdown-item" href ="#">Gad Deodari</a>
+<a class="dropdown-item" href ="#">Gaosud</a>
+<a class="dropdown-item" href ="#">Gaundgaon</a>
+<a class="dropdown-item" href ="#">Ghatangri</a>
+<a class="dropdown-item" href ="#">Ghogarewadi</a>
+<a class="dropdown-item" href ="#">Ghuggi</a>
+<a class="dropdown-item" href ="#">Gogaon</a>
+<a class="dropdown-item" href ="#">Gopalwadi</a>
+<a class="dropdown-item" href ="#">Gorewadi</a>
+<a class="dropdown-item" href ="#">Govardhanwadi</a>
+<a class="dropdown-item" href ="#">Hinglajwadi</a>
+<a class="dropdown-item" href ="#">Irla</a>
+<a class="dropdown-item" href ="#">Jagji</a>
+<a class="dropdown-item" href ="#">Jahagirdarwadi</a>
+<a class="dropdown-item" href ="#">Jawale Dumala</a>
+<a class="dropdown-item" href ="#">Junoni</a>
+<a class="dropdown-item" href ="#">Kajala</a>
+<a class="dropdown-item" href ="#">Kakaspur</a>
+<a class="dropdown-item" href ="#">Kamegaon</a>
+<a class="dropdown-item" href ="#">Kanagara</a>
+<a class="dropdown-item" href ="#">Karajkheda</a>
+<a class="dropdown-item" href ="#">Kaudgaon</a>
+<a class="dropdown-item" href ="#">Kaudgaon</a>
+<a class="dropdown-item" href ="#">Kawaldara Tanda</a>
+<a class="dropdown-item" href ="#">Kawalewadi</a>
+<a class="dropdown-item" href ="#">Keshegaon</a>
+<a class="dropdown-item" href ="#">Khamaswadi</a>
+<a class="dropdown-item" href ="#">Khamgaon</a>
+<a class="dropdown-item" href ="#">Khanapur</a>
+<a class="dropdown-item" href ="#">Khed</a>
+<a class="dropdown-item" href ="#">Kini</a>
+<a class="dropdown-item" href ="#">Kolegaon</a>
+<a class="dropdown-item" href ="#">Kolewadi</a>
+<a class="dropdown-item" href ="#">Kombadwadi</a>
+<a class="dropdown-item" href ="#">Kond</a>
+<a class="dropdown-item" href ="#">Kumalwadi</a>
+<a class="dropdown-item" href ="#">Lasona</a>
+<a class="dropdown-item" href ="#">Mahadevwadi</a>
+<a class="dropdown-item" href ="#">Mahalingi</a>
+<a class="dropdown-item" href ="#">Medsinga</a>
+<a class="dropdown-item" href ="#">Mendha</a>
+<a class="dropdown-item" href ="#">Mohtarwadi</a>
+<a class="dropdown-item" href ="#">Mulewadi</a>
+<a class="dropdown-item" href ="#">Nandurga</a>
+<a class="dropdown-item" href ="#">Nitali</a>
+<a class="dropdown-item" href ="#">Padoli</a>
+<a class="dropdown-item" href ="#">Palaswadi</a>
+<a class="dropdown-item" href ="#">Palsap</a>
+<a class="dropdown-item" href ="#">Panchgavhan</a>
+<a class="dropdown-item" href ="#">Panwadi</a>
+<a class="dropdown-item" href ="#">Patoda</a>
+<a class="dropdown-item" href ="#">Pawarwadi</a>
+<a class="dropdown-item" href ="#">Pimpri</a>
+<a class="dropdown-item" href ="#">Pohner</a>
+<a class="dropdown-item" href ="#">Rajuri</a>
+
+<a class="dropdown-item" href ="#">Rui dhoki</a>
+<a class="dropdown-item" href ="#">Ruibhar</a>
+<a class="dropdown-item" href ="#">Sakanewadi</a>
+<a class="dropdown-item" href ="#">Samba</a></a>
+<a class="dropdown-item" href ="#">Samudrawan</a>
+<a class="dropdown-item" href ="#">Sangvi</a>
+<a class="dropdown-item" href ="#">Sanja</a>
+<a class="dropdown-item" href ="#">Sarola Bk.</a>
+<a class="dropdown-item" href ="#">Tadwala K.</a>
+<a class="dropdown-item" href ="#">Shekapur</a>
+<a class="dropdown-item" href ="#">Shingoli</a>
+<a class="dropdown-item" href ="#">Sonegaon</a>
+<a class="dropdown-item" href ="#">Ramwadi</a>
+<a class="dropdown-item" href ="#">Takali Bembali</a>
+<a class="dropdown-item" href ="#">Surdi</a>
+
+
+<a class="dropdown-item" href ="#">Takali Dhoki</a>
+<a class="dropdown-item" href ="#">Takwiki</a>
+<a class="dropdown-item" href ="#">Tawaraj Kheda</a>
+<a class="dropdown-item" href ="#">Ter</a>
+<a class="dropdown-item" href ="#">Thodsarwadi</a>
+<a class="dropdown-item" href ="#">Toramba</a>
+<a class="dropdown-item" href ="#">Tugaon</a>
+<a class="dropdown-item" href ="#">Umaregavhan</a>
+<a class="dropdown-item" href ="#">Upla</a>
+<a class="dropdown-item" href ="#">Uttami Kayapur</a>
+<a class="dropdown-item" href ="#">Vitthalwadi</a>
+<a class="dropdown-item" href ="#">Wadala</a>
+<a class="dropdown-item" href ="#">Wadgaon</a>
+<a class="dropdown-item" href ="#">Wadibamani</a>
+<a class="dropdown-item" href ="#">Wagholi</a>
+<a class="dropdown-item" href ="#">Wakharwadi</a>
+<a class="dropdown-item" href ="#">Walgud</a>
+<a class="dropdown-item" href ="#">Wanewadi</a>
+<a class="dropdown-item" href ="#">Waruda</a>
+<a class="dropdown-item" href ="#">Warwanti</a>
+<a class="dropdown-item" href ="#">Yedsi</a>
+<a class="dropdown-item" href ="#">Yeoti</a>
+<a class="dropdown-item" href ="#">Zaregaon</a>
+
+  </div>
+          </form>
 
 
 
