--- a/aquifer.html
+++ b/aquifer.html
@@ -461,7 +461,7 @@ function filterFunction() {
           <a class="dropdown-item" href ="#">Zaregaon</a>
 
             </div>
-                    </form>
+
 
 
           <!-- Topbar Navbar -->
@@ -628,8 +628,28 @@ function filterFunction() {
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+
+          <!-- Page Heading -->
+          <h1 class="h3 mb-2 text-gray-800">Ground Water Recharge Area</h1>
+          <!-- Content Row -->
+          <div class="row">
+            <div class="col-xl-8 col-lg-7">
+              <div class="card shadow mb-5">
+
+
+              <img width="80%" height="60%" src="img/Recharge_Priority_area_map.jpg" alt="Ground Water Recharge Area">
+</div>
+              <!-- Borewell Chart -->
+
+
+
+
+
 
         <!-- /.container-fluid -->
+
 
       </div>
       <!-- End of Main Content -->
