--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ for (i = 0; i < a.length; i++) {
 
 </script>
 <!-- NAVBAR-->
-<nav class="navbar navbar-expand-lg py-3 navbar-light bg-gradient-primary shadow-sm ">
+<nav class="navbar navbar-expand-lg py-3 navbar-dark bg-gradient-primary shadow-sm">
   <div class="container">
     <a href="#" class="navbar-brand" >
       <!-- Logo Image -->
