--- a/rainfall.html
+++ b/rainfall.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<style>
+		.dropdown-menu {
+			width: 50%;
+		}
+
+		.scrollable-menu {
+			height: auto;
+			max-height: 200px;
+			overflow-x: hidden;
+		}
+	</style>
 <script>
 window.onload = function () {
 
