--- a/aquifer.html
+++ b/aquifer.html
@@ -44,6 +44,17 @@ function filterFunction() {
 
   <!-- Custom styles for this page -->
   <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+  <style>
+    .dropdown-menu {
+      width: 50%;
+    }
+
+    .scrollable-menu {
+      height: auto;
+      max-height: 200px;
+      overflow-x: hidden;
+    }
+  </style>
 
 </head>
 
@@ -163,8 +174,8 @@ function filterFunction() {
               <i class="fa fa-plus-square"></i>
               <span>Water Level</span></a>
           </li>
-  
-  
+
+
             <!-- Nav Item - Trees -->
               <li class="nav-item">
                       <a class="nav-link" href="treesForm.html">
@@ -337,7 +348,7 @@ function filterFunction() {
                     <button onclick="myFunction()" type="button" class="btn btn-sm-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Village
                     </button>
-                    <div id="myDropdown" class="dropdown-menu">
+                    <div id="myDropdown" class="dropdown-menu scrollable-menu">
                       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
           <a class="dropdown-item" href ="#">Ambehol</a>
           <a class="dropdown-item" href ="#">Ambejawalga</a>
