--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
 
+  <style>
+    .dropdown-menu {
+      width: 50%;
+    }
+
+    .scrollable-menu {
+      height: auto;
+      max-height: 200px;
+      overflow-x: hidden;
+    }
+  </style>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,6 +28,7 @@
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="css/main.css" ref="stylesheet">
 
 </head>
 <script>
@@ -356,7 +369,7 @@ for (i = 0; i < a.length; i++) {
           Village
           </button>
 
-          <div id="myDropdown" class= "dropdown-menu" >
+          <div id="myDropdown" class= "dropdown-menu scrollable-menu" >
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
 
 <a class="dropdown-item" href ="#">Ambehol</a>
