rain attribute change

--- a/rain.html
+++ b/rain.html
@@ -662,63 +662,43 @@ function filterFunction() {
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead onloadedmetadata="Rainfall(mm)">
                     <tr>
-                      <th>jan</th>
+                      <th>mm</th>
                       <th>location</th>
-                      <th>depth</th>
-                      <th>level of water</th>
-                      <th>usage</th>
-                      <th>categeory</th>
-                      <th>status</th>
-                      <th>water quality</th>
-                      <th>duration of pumping </th>
-                      <th>no of people</th>
+                      <th>Volunteer name</th>
+                      <th>date</th>
+                      <th>time</th>
+
 
 
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
-                      <th>owner name</th>
-                      <th>location</th>
-                      <th>depth</th>
-                      <th>level of water</th>
-                      <th>usage</th>
-                      <th>categeory</th>
-                      <th>status</th>
-                      <th>water quality</th>
-                      <th>duration of pumping </th>
-                      <th>no of people</th>
+                      <th>32 mm</th>
+                      <th>shree nagar</th>
+                      <th>sneha</th>
+                      <th>5 dec</th>
+                      <th>8 am</th>
+
 
                     </tr>
                   </tfoot>
                   <tbody>
                     <tr>
-                      <td>Tiger Nixon</td>
-                      <td>osmd</td>
-                      <td>15</td>
-                      <td>100</td>
-                      <td>residential</td>
-                      <td>daily</td>
-                      <td>on</td>
-                      <td>good</td>
-                      <td>5 months</td>
-                      <td>4</td>
-
+                      <th>30 mm</th>
+                      <th>shanti nagar</th>
+                      <th>sriya</th>
+                      <th>5 dec</th>
+                      <th>10 am</th>
 
 
                     </tr>
                     <tr>
-                      <td>Tiger Nixon</td>
-                      <td>osmd</td>
-                      <td>15</td>
-                      <td>100</td>
-                      <td>residential</td>
-                      <td>daily</td>
-                      <td>on</td>
-                      <td>good</td>
-                      <td>5 months</td>
-                      <td>4</td>
-
+                      <th>36 mm</th>
+                      <th>vaishali nagar</th>
+                      <th>riya</th>
+                      <th>5 dec</th>
+                      <th>11 am</th>
                     </tr>
 
                   </tbody>
