water level form is added

--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@ for (i = 0; i < a.length; i++) {
         </div>
       </li> -->
 
-       <!-- Nav Item - BoreWell -->
-       <li class="nav-item">
-          <a class="nav-link" href="borewellForm.html"></a>
-            <i class="fas fa-upload"></i>
-            <span>Borewell</span></a>
-        </li>
-
+        <!-- Nav Item - BoreWell -->
+        <li class="nav-item">
+            <a class="nav-link" href="borewellForm.html">
+              <i class="fas fa-upload"></i>
+              <span>Borewell</span></a>
+          </li>
+  
          <!-- Nav Item - Rainfall -->
        <li class="nav-item">
           <a class="nav-link" href="rainfallForm.html">
