--- a/rainfallForm.html
+++ b/rainfallForm.html
@@ -175,7 +175,7 @@ function filterFunction() {
 
          <!-- Nav Item - Rainfall -->
        <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="rainfallForm.html">
             <i class="fas fa-spinner"></i>
             <span>Rainfall</span></a>
         </li>
