--- a/treesForm.html
+++ b/treesForm.html
@@ -655,7 +655,7 @@ function filterFunction() {
                 <div class="wrap-contact100">
                     <form class="contact100-form validate-form">
                         <span class="contact100-form-title">
-                             Rainfall Data Collection
+                             Trees Data Collection
                         </span>
         
                         <label class="label-input100" for="first-name">Owner's Name *</label>
