changed in borewell form

--- a/borewellForm.html
+++ b/borewellForm.html
@@ -716,9 +716,16 @@ function filterFunction() {
                         </div>
 
 
-                        <label class="label-input100" for="">category *</label>
+                        <label class="label-input100" for="">purpose *</label>
                         <div class="wrap-input100 rs1 validate-input">
                             <input id="category" class="input100" type="text" name="category" placeholder="eg. use for drinking ">
+                            <span class="focus-input100"></span>
+                        </div>
+
+                        
+                        <label class="label-input100" for="">type  *</label>
+                        <div class="wrap-input100 rs1 validate-input">
+                            <input id="category" class="input100" type="text" name="category" placeholder="eg. private borewell ">
                             <span class="focus-input100"></span>
                         </div>
 
